--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 <body>
     <h2 style="text-align: center;color: blueviolet;font-size: 50px;">linklar</h2>
     <a href="./lorem.html" target="_blank" class="link1">Lorem sahifasiga o`tish</a>
+    <p class="stiky">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Eius expedita possimus rerum nam ab corporis beatae atque dolorum asperiores animi.</p>
     <button class="btn">Yuborish</button>
     <button class="btn">Yuborish</button>
     <button class="btn">Yuborish</button>
@@ -39,6 +40,6 @@
     <div class="div1">
         <div class="div2"></div>
     </div>
-
+<div class="fixsed"><p>^</p></div>
 </body>
 </html>
